# compare_dictionaries

./: .gitignore  LICENSE  README.md  pyproject.toml
comp_dict/: compare_dictionaries.py  constants.yaml  dict_schema.py  helper.py  main.py  s3_fetcher.py
comp_dict/data_fetcher/: data_fetcher.py
comp_dict/schemas/: README.md
comp_dict/test_data/: trains_1.json  trains_2.json  trains_3.json  trains_8.json  trains_9.json
tests/: ]  conftest.py  test_comp_dict.py  test_compare.py  test_is_subset.py  test_which_param_subset.py
