[tool.poetry]
name = "comp_dict"
version = "0.1.0"
description = ""
authors = ["meadosc <meadosc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.20.22"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.4"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
