[tool.poetry]
name = "compare_dictionaries"
version = "0.1.0"
description = ""
authors = ["meadosc <meadosc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.20.32"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
